I added the Document Provider branch for navigate from the old repository

--- a/Owncloud iOs Client/SupportingFiles/Languages/fr.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/fr.lproj/Localizable.strings
@@ -249,3 +249,6 @@
 //Favorites
 "favorite" = "Favori";
 "unfavorite" = "Non favori";
+
+//Document provider
+"error_login_doc_provider" = "Unable to access to your account. Go to Owncloud app to configure it";
