--- a/Owncloud iOs Client/SupportingFiles/Languages/fi.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/fi.lproj/Localizable.strings
@@ -250,3 +250,6 @@
 //Favorites
 "favorite" = "Suosikit";
 "unfavorite" = "Poista suosikeista";
+
+//Document provider
+"error_login_doc_provider" = "Unable to access to your account. Go to Owncloud app to configure it";
