--- a/Owncloud iOs Client/SupportingFiles/Languages/de.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/de.lproj/Localizable.strings
@@ -252,4 +252,4 @@
 "unfavorite" = "Favorit entfernen";
 
 //Document provider
-"error_login_doc_provider" = "Unable to access to your account. Go to Owncloud app to configure it";
+"error_login_doc_provider" = "Zugriff auf Konto nicht möglich. Bitte melden Sie sich über die ownCloud App an.";
