--- a/Owncloud iOs Client/SupportingFiles/Languages/en.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/en.lproj/Localizable.strings
@@ -252,4 +252,4 @@
 "unfavorite" = "Unfavorite";
 
 //Document provider
-"error_login_doc_provider" = "Unable to access to your account. Go to Owncloud app to configure it";
+"error_login_doc_provider" = "Unable to access your account. Please use the ownCloud app to sign in first.";
