--- a/Owncloud iOs Client/SupportingFiles/Languages/fr.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/fr.lproj/Localizable.strings
@@ -251,4 +251,4 @@
 "unfavorite" = "Non favori";
 
 //Document provider
-"error_login_doc_provider" = "Unable to access to your account. Go to Owncloud app to configure it";
+"error_login_doc_provider" = "Impossible d'accéder de nous. Se il vous plaît vous connecter à l'application ownCloud.";
