--- a/Owncloud iOs Client/SupportingFiles/Languages/it.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/it.lproj/Localizable.strings
@@ -252,4 +252,4 @@
 "unfavorite" = "No preferito";
 
 //Document provider
-"error_login_doc_provider" = "Unable to access to your account. Go to Owncloud app to configure it";
+"error_login_doc_provider" = "Impossibile l'accesso di noi. Entra per applicazione ownCloud.";
