--- a/Owncloud iOs Client/SupportingFiles/Languages/fi.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/fi.lproj/Localizable.strings
@@ -253,3 +253,7 @@
 
 //Document provider
 "error_login_doc_provider" = "Pääse tilillesi. Ole hyvä, kirjaudu sisään ownCloud app.";
+
+//Location
+"location_not_enabled"="Location Services disabled";
+"message_location_not_enabled"="Please go to Settings and turn on Location Services for this app to allow instant photo uploads.";
