--- a/Owncloud iOs Client/SupportingFiles/Languages/fr.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/fr.lproj/Localizable.strings
@@ -252,3 +252,7 @@
 
 //Document provider
 "error_login_doc_provider" = "Impossible d'accéder de nous. Se il vous plaît vous connecter à l'application ownCloud.";
+
+//Location
+"location_not_enabled"="Location Services disabled";
+"message_location_not_enabled"="Please go to Settings and turn on Location Services for this app to allow instant photo uploads.";
