--- a/Owncloud iOs Client/SupportingFiles/Languages/it.lproj/Localizable.strings
+++ b/Owncloud iOs Client/SupportingFiles/Languages/it.lproj/Localizable.strings
@@ -42,6 +42,7 @@
 "authentification_not_valid" = "Non è possibile accedere a questo server";
 "error_too_many_http_redirects" = "There has been an error when establishing the connection. Please, try it again.";
 "retry" = "Retry";
+"help_link_login" = "New to $appname?";
 
 //TabBarItems
 "settings"="Impostazioni";
