--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,3 @@
-* xref:index.adoc[User Manual]
-** xref:ios_app.adoc[iOS App]
-** xref:ios_faq.adoc[iOS FAQ]
+* The iOS App 
+** xref:ios_app.adoc[Using the iOS App]
+** xref:ios_faq.adoc[FAQ]
