Amend the documentation navigation
This change removes redundant content and unnecessary indentation. This
should make it look both more professional and easier to use.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,2 @@
-* The iOS App 
-** xref:ios_app.adoc[Using the iOS App]
-** xref:ios_faq.adoc[FAQ]
+* xref:ios_app.adoc[Using the iOS App]
+* xref:ios_faq.adoc[FAQ]
